Kubernetes/vagrant-k8s-cluster/vagrant-shared/manifests/Static-Pod-example.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: static-busybox
  name: static-busybox
spec:
  containers:
  - command:
    - sleep
    - "1000"
    image: busybox
    name: static-busybox
    resources:
      limits:
        cpu: 0.5m
        memory: 512Mi
      requests:
        cpu: 0.2m
        memory: 128Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Never
...
